# agent-rails

./: .agent-rails.json  .gitignore  AGENTS.md  AI_START_HERE.md  GATED_AI_PROGRESS_PROTOCOL.md  LICENSE  MASTER_AI_PROJECT_OPERATING_SYSTEM_PERSONAL.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agent-rails.yml
docs/: CASE_STUDY.md  CONTRIBUTING.md  GITHUB_RELEASE_DRAFT.md  LAUNCH_CHECKLIST.md  PROJECT_BRIEF.md  QA.md  ROADMAP.md  SECURITY.md  V0_1_0_RELEASE_REVIEW.md
examples/: sample-gate-report.md
src/agent_rails/: __init__.py  checks.py  cli.py  templates.py
tests/: __init__.py  test_checks.py
