[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rails"
version = "0.1.0"
description = "Portable guardrails for AI-assisted repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Agent Rails Contributors" }
]
keywords = ["ai", "agents", "guardrails", "github-actions", "security", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security"
]

[project.scripts]
agent-rails = "agent_rails.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

